fix(basic-3.6,basic-3.7,basic-3.8):added missing spaces in properties,semicolon,line wrapping

--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
     width: 100%;
 }
 
-.aaa .more-inf {
+.aaa,
+.more-inf {
     font-family: fantasy, cursive;
 }
 
@@ -30,7 +31,7 @@ body {
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -42,11 +43,13 @@ ul {
     padding: 0;
 }
 
-li, h3 {
+li,
+h3 {
     list-style: none;
 }
 
-input, button {
+input,
+ button {
     outline: none;
 }
 
@@ -133,7 +136,7 @@ li > label {
 }
 
 li > input[type="text"] {
-    width: 226px
+    width: 226px;
 }
 
 button.delete img {
@@ -156,12 +159,12 @@ ul#completed-tasks label {
 /* Edit Task */
 
 ul li input[type="text"] {
-    display: none
+    display: none;
 }
 
 ul li.edit-mode input[type="text"] {
     display: inline-block;
-    width: 224px
+    width: 224px;
 }
 
 ul li.edit-mode label {
